--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
         <a href="#" id="a">About Me</a>
         <a href="#" id="a">My Works</a>
         <a href="#" id="a">My skills</a>
+        <a href="#" id="a" style="float:right">Github</a>
+        <a href="#" id="a" style="float:right">Twitter</a>
     </div>
-        <div class="container-footer">
-        <p>follow me on!!...</p>
-        <a href="#" ><i class="fab fa-github"></i></a></div>
+    <div class="body-container">
+        <div class="image-container">
+            <img src="myimage.jpg" alt="" height=300px width=250px>
+        </div>
+            <p id="text">Hi i am Aditya Pavan. I am from visakhapatnam.I had completed my Btech in Raghu engineering college
+            with an aggregate of 77.5%. Both my schooling and plus two were also completed in vizag. I am 
+            currently working as an associate engineer at virtusa consulting services, hyderabad. I am a 
+            person who wants to face challenges and go ahead with lot of positive take aways. I love to do 
+            programming and other software applications. I had a sound knowledge on C, C++, JAVA, HTML, CSS 
+            and basics of JS and PHP. As a programmer i always try to build my carrer in a right path where
+            i can improve all my knowledge which i gained until now.</p>
     </div>
 </body>
 </html>
