adding other files

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="container">
-        <a href="#" id="a">About Me</a>
-        <a href="#" id="a">My Works</a>
-        <a href="#" id="a">My skills</a>
-        <a href="#" id="a" style="float:right">Github</a>
-        <a href="#" id="a" style="float:right">Twitter</a>
+        <a href="index.html" id="a">About Me</a>
+        <a href="blog.html" id="a">My Works</a>
+        <a href="skills.html" id="a">My skills</a>
+        <a href="#" id="a">Github</a>
+        <a href="#" id="a">Twitter</a>
     </div>
     <div class="body-container">
         <div class="image-container">
