Added final files

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <a href="#" id="a">Github</a>
     <a href="#" id="a">Twitter</a>
 </div>
-   
+<div class="container-x"> 
 <center><br><br><h2><u>MY WORKS:</u></h2><br><br>
 Online Food Delivery System<br><br><br>
 <a href="#" id="b1" class="button">Watch Live</a> <a href="#" id="b4" class="button">View Source</a><br><br><br>
@@ -20,6 +20,6 @@ Vehicle Parking System<br><br><br>
 Cloud security systems<br><br><br>
 <a href="#" id="b3"  class="button">Watch Live</a> <a href="#" id="b6"  class="button">View Source</a><br><br><br>
 </center>
-
+</div>
 </body>
 </html>
